start with basic styling

--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,14 @@
     <title>Sumplete Game</title>
 </head>
 <body>
-    <div id="game-container"></div>
+    <div class="container">
+        <h1>Sumplete</h1>
+        <p>Welcome to Sumplete!</p>
+        <p>Your goal is to mark the numbers in the grid so that each row and column adds up to the specified sums.</p>
+        <p>Good luck!</p>
+        
+        <div id="game-container"></div>
+    </div>
     <script src="sumplete.js"></script>
 </body>
 </html>
