--- a/web/index.html
+++ b/web/index.html
@@ -7,11 +7,18 @@
     <title>Sumplete Game</title>
 </head>
 <body>
-    <div class="container">
-        <h1>Sumplete</h1>
-        <p>Welcome to Sumplete!</p>
-        <p>Your goal is to mark the numbers in the grid so that each row and column adds up to the specified sums.</p>
-        <p>Good luck!</p>
+    <div id="header">
+        <p>Sumplete</p>
+        <p id="timer">
+            Time: <span id="time-elapsed">00:00</span>
+        </p>
+    </div>
+
+    <div id="container">
+        <p style="font-size: larger;">Welcome to Sumplete!</p>
+        <p style="font-size: large;">Your goal is to mark the numbers in the grid so that each row and column adds up to the specified sums.</p>
+        <p style="font-size: large;">The timer in the header shows how long you've been playing. It starts as soon as you begin the game, and stops when every row and column is correct.</p>
+        <p style="font-size: large;">Good luck!</p>
         
         <div id="game-container"></div>
     </div>
