add start button with functionality

--- a/web/index.html
+++ b/web/index.html
@@ -21,6 +21,7 @@
         <p style="font-size: large;">Good luck!</p>
         
         <div id="game-container"></div>
+        <button id="start-button">Start Game</button>
     </div>
     <script src="sumplete.js"></script>
 </body>
