add reset button with functionality

--- a/web/index.html
+++ b/web/index.html
@@ -21,7 +21,8 @@
         <p style="font-size: large;">Good luck!</p>
         
         <div id="game-container"></div>
-        <button id="start-button">Start Game</button>
+        <button id="start-button" class="button">Start Game</button>
+        <button id="reset-button" class="button" style="display: none;">Reset Game</button>
     </div>
     <script src="sumplete.js"></script>
 </body>
