--- a/web/index.html
+++ b/web/index.html
@@ -21,6 +21,15 @@
         <p style="font-size: large;">Good luck!</p>
         
         <div id="game-container"></div>
+
+        <select id="grid-size">
+            <option value="4">4x4</option>
+            <option value="5">5x5</option>
+            <option value="6">6x6</option>
+            <option value="7">7x7</option>
+            <option value="8">8x8</option>
+            <option value="9">9x9</option>
+        </select>
         <button id="start-button" class="button">Start Game</button>
         <button id="reset-button" class="button" style="display: none;">Reset Game</button>
     </div>
