add footer with copyright year and improve footer styling

--- a/web/index.html
+++ b/web/index.html
@@ -35,4 +35,14 @@
     </div>
     <script src="sumplete.js"></script>
 </body>
+
+<footer>
+    <p>Developed by Gabriel Kleebaum (kGabriel)</p>
+    <p>Copyright &copy; <span id="copyright-year"></span></p>
+    <p>Imprint: <a href="http://www.kgabriel.dev/imprint.html">http://www.kgabriel.dev/imprint.html</a></p>
+
+    <script>
+        document.getElementById("copyright-year").textContent = new Date().getFullYear();
+    </script>
+</footer>
 </html>
