refactor instructions section for better structure and styling

--- a/web/index.html
+++ b/web/index.html
@@ -15,10 +15,13 @@
     </div>
 
     <div id="container">
-        <p style="font-size: larger;">Welcome to Sumplete!</p>
-        <p style="font-size: large;">Your goal is to mark the numbers in the grid so that each row and column adds up to the specified sums.</p>
-        <p style="font-size: large;">The timer in the header shows how long you've been playing. It starts as soon as you begin the game, and stops when every row and column is correct.</p>
-        <p style="font-size: large;">Good luck!</p>
+        <div id="instructions">
+            <p style="font-size: larger;">Welcome to Sumplete!</p>
+            <p style="font-size: large;">Your goal is to mark the numbers in the grid so that each row and column adds up to the specified sums.</p>
+            <p style="font-size: large;">The timer in the header shows how long you've been playing. It starts as soon as you begin the game, and stops when every row and column is correct.</p>
+            <p style="font-size: large;">Good luck!</p>
+        </div>
+        
         
         <div id="game-container"></div>
 
